--- a/web/styles.css
+++ b/web/styles.css
@@ -1,4 +1,3 @@
-/* Add this CSS to your existing styles.css file or create a new one if not exists */
 
 body {
   font-family: Arial, sans-serif;
@@ -10,9 +9,11 @@ body {
 }
 
 header {
+  margin: 10px;
   background-color: #333;
+  border: 1px solid #000;
   color: #fff;
-  padding: 10px 20px;
+  padding: 10px;
   text-align: center;
 }
 
@@ -39,37 +40,38 @@ header a {
   text-decoration: none;
 }
 
-.main-sidebar {
-  display: flex;
-  flex-direction: row;
-  flex: 1; /* Allow the container to grow to fill remaining space */
-}
 
-.main-sidebar-footer {
-  display: flex;
-  flex-direction: column;
-  flex: 1; /* Allow the container to grow to fill remaining space */
+.container {
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: 1fr 4fr; 
+  min-height: calc(100vh - 2 * 40px);
 }
 
 main {
+  margin: 10px;
+  border: 1px solid #000;
+  padding: 10px;
   display: flex;
-  flex: 4; /* Allow main content to grow */
-  order: 2; /* Move main content below sidebar */
+  flex: 4; 
+  order: 2;
 }
 
 .sidebar {
+  margin: 10px;
   background-color: #f0f0f0;
-  padding: 20px;
-  flex: 1; /* Set sidebar width */
-  order: 1; /* Move sidebar to the left */
+  border: 1px solid #000;
+  padding: 10px;
+  flex: 1; 
+  order: 1; 
 }
 
 .content {
   flex: 4; /* Allow content to grow */
-  padding: 20px;
+  padding: 10px;
 }
 
-#boxtable {
+#results {
   border: 2px dashed #000;
   border-radius: 5px;
   padding: 10px;
@@ -79,37 +81,51 @@ main {
   display: flex;
   overflow: auto;
 }
+
 footer {
+  margin: 10px;
   background-color: #333;
+  border: 1px solid #000;
   color: #fff;
   text-align: center;
-  padding: 10px 20px;
-  order: 3; /* Move footer to the bottom */
+  padding: 10px;
+  order: 3; 
+  grid-column: 1 / span 2;
 }
 
 
 
 @media (max-width: 500px) {
-  .main-sidebar-footer {
+  header ul {
     flex-direction: column;
+    align-items: center; 
   }
 
-  .main-sidebar {
-    display: flex;
-    flex-direction: row;
-    flex: 1; /* Allow the container to grow to fill remaining space */
+  header li {
+    margin-right: 0; 
+    margin-bottom: 10px; 
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-areas: 
+      "content content"
+      "sidebar footer"; 
   }
 
   main {
-    order: 1; /* Move main content to the top */
+    grid-area: content;
   }
 
-  .sidebar {
-    order: 3; /* Move sidebar below main content */
+  .sidebar{
+      grid-area: sidebar;
+      grid-column: 1 /span 0.5;
   }
-
   footer {
-    order: 2; /* Move footer below sidebar */
-    flex: 1; /* Allow footer to grow */
+    grid-column: 2; 
+    grid-row:2;
   }
 }
+
+
